--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.0",
     "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5"
+    "@types/react-dom": "^18.0.5",
     "parcel": "^2.6.0",
     "process": "^0.11.10",
     "react": "^18.1.0",
