--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "process": "^0.11.10",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "exapmle-react-lib": "https://github.com/jp-96/exapmle-react-lib"
   },
   "scripts": {
     "test": "react-scripts test",
