--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,6 +26,7 @@
                 "--immutable-cache",
                 "--check-cache",
             ],
+            "problemMatcher": [],
         },
     ]
 }
